base/yopass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yopass
  namespace: yopass
  labels:
    app: yopass
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 1337
      protocol: TCP
  selector:
    app: yopass
